--- a/Hello_World/app/src/main/res/layout/activity_card_main.xml
+++ b/Hello_World/app/src/main/res/layout/activity_card_main.xml
@@ -23,6 +23,9 @@
         android:layout_centerHorizontal="true"
         android:contentDescription="@string/buffer_text"
          />
+    <!--There are two ways to display your text values, one through hardcoding
+        and the other through calling te string resource variable name-->
+
     <Button
         android:id="@+id/Thanks"
         android:layout_width="wrap_content"
@@ -41,6 +44,7 @@
          ie if you want to move it height wise (y axis), leave layout_height to wrap
          -->
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
@@ -50,22 +54,32 @@
             with the parent!
             -->
         <TextView
-            android:id="@+id/stuff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="22sp"
-            android:text="PC: LilyPichu"
-            tools:ignore="HardcodedText" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="32sp"
             android:layout_alignParentRight="true"
             android:layout_alignParentEnd="true"
             android:text="@string/end_credits"
+            android:fontFamily="casual"
+            android:textColor="#c02f1d"
+            android:textSize="42sp"
+            android:paddingRight="5dp"
+            android:paddingBottom="20dp"
             />
 
+        <TextView
+            android:id="@+id/stuff"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:textSize="32sp"
+            android:paddingTop="82dp"
+            android:fontFamily="cursive"
+            android:layout_alignParentStart="true"
+            tools:ignore="HardcodedText"
+            android:text="PC: LilyPichu"
+            />
     </RelativeLayout>
+
 
 
 </RelativeLayout>
