--- a/HelloAndroid/app/src/main/res/layout/activity_main.xml
+++ b/HelloAndroid/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,62 @@
-<?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.example.helloandroid.MainActivity"
+    android:orientation="vertical"
+    >
+
+    <!-- Use scaleType fitXY if you want to fit your image from screen to screen-->
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/google_developer_scholarship2"
+        android:layout_weight="12"
+        />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingLeft="25dp"
+        android:text="@string/Udacity"
+        android:layout_weight="1"
+        />
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingLeft="25dp"
+        android:text="@string/Address"
+        android:layout_weight="1"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingLeft="25dp"
+        android:text="@string/City"
+        android:layout_weight="1"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:paddingLeft="25dp"
+        android:layout_weight="1"
+        android:text="@string/Phone"
+        />
+</LinearLayout>
+<!--
+<TextView
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="@string/City"
+/>
+<TextView
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:text="@string/Phone"
+android:layout_weight="1"
+/>
+-->
