--- a/CourtCounter/app/src/main/res/layout/activity_main.xml
+++ b/CourtCounter/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:gravity="center"
         android:text="0"
         android:padding="4dp"
+        android:id="@+id/team_a_score"
         />
 
     <Button
@@ -30,6 +31,7 @@
         android:gravity="center"
         android:text="+3 points"
         android:layout_margin="4dp"
+        android:id="@+id/three_p"
         />
 
 
@@ -39,6 +41,7 @@
         android:gravity="center"
         android:text="+2 points"
         android:layout_margin="4dp"
+        android:id="@+id/two_p"
         />
 
 
@@ -48,5 +51,6 @@
         android:gravity="center"
         android:text="FREE THROW"
         android:layout_margin="4dp"
+        android:id="@+id/free_p"
         />
 </LinearLayout>
