Figured out how to make switch cases depending on the button pressed. Rather not create three separate functions for a trivial matter.

--- a/CourtCounter/app/src/main/res/layout/activity_main.xml
+++ b/CourtCounter/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:text="+3 points"
         android:layout_margin="4dp"
         android:id="@+id/three_p"
+        android:onClick="pointMade"
         />
 
 
@@ -42,6 +43,7 @@
         android:text="+2 points"
         android:layout_margin="4dp"
         android:id="@+id/two_p"
+        android:onClick="pointMade"
         />
 
 
@@ -52,5 +54,6 @@
         android:text="FREE THROW"
         android:layout_margin="4dp"
         android:id="@+id/free_p"
+        android:onClick="pointMade"
         />
 </LinearLayout>
