--- a/CourtCounter/app/src/main/res/layout/activity_main.xml
+++ b/CourtCounter/app/src/main/res/layout/activity_main.xml
@@ -1,59 +1,147 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:orientation="vertical"
     >
 
-    <TextView
+    <!-- This is the parent linear layout, defaulting to horizontal orientation.
+         The two child layouts are also linear, and are oriented vertically.
+         IDs are assigned to all Views within the child layouts.
+
+         Operations to keep track of each team's score is provided onClick for each button.
+    -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Team A"
-        android:gravity="center"
-        android:padding="4dp"
-     />
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="0"
-        android:padding="4dp"
-        android:id="@+id/team_a_score"
-        />
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="+3 points"
-        android:layout_margin="4dp"
-        android:id="@+id/three_p"
-        android:onClick="pointMade"
-        />
+            android:id="@+id/team_a_view"
+            >
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Team A"
+                android:gravity="center"
+                android:padding="4dp"
+                />
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="0"
+                android:padding="4dp"
+                android:id="@+id/team_a_score"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="+3 points"
+                android:layout_margin="4dp"
+                android:id="@+id/three_pa"
+                android:onClick="pointMade"
+                />
 
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="+2 points"
-        android:layout_margin="4dp"
-        android:id="@+id/two_p"
-        android:onClick="pointMade"
-        />
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="+2 points"
+                android:layout_margin="4dp"
+                android:id="@+id/two_pa"
+                android:onClick="pointMade"
+                />
 
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="FREE THROW"
-        android:layout_margin="4dp"
-        android:id="@+id/free_p"
-        android:onClick="pointMade"
-        />
-</LinearLayout>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="FREE THROW"
+                android:layout_margin="4dp"
+                android:id="@+id/free_pa"
+                android:onClick="pointMade"
+                />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:layout_weight="1"
+            android:id="@+id/team_b_view"
+            >
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Team B"
+                android:gravity="center"
+                android:padding="4dp"
+                />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="0"
+                android:padding="4dp"
+                android:id="@+id/team_b_score"
+                />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="+3 points"
+                android:layout_margin="4dp"
+                android:id="@+id/three_pb"
+                android:onClick="pointMade"
+                />
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="+2 points"
+                android:layout_margin="4dp"
+                android:id="@+id/two_pb"
+                android:onClick="pointMade"
+                />
+
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="FREE THROW"
+                android:layout_margin="4dp"
+                android:id="@+id/free_pb"
+                android:onClick="pointMade"
+                />
+        </LinearLayout>
+    </LinearLayout>
+
+    <!-- A button that will reset the score for both teams-->
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:id="@+id/reset_button"
+            android:text="Reset Scores"
+            android:onClick="resetScores"
+            />
+
+</RelativeLayout>
